--- a/style.css
+++ b/style.css
@@ -1,9 +1,19 @@
+a {
+    color: #1b1b1b;
+}
+a:hover {
+    color: purple;
+    text-decoration: none;
+    background-image: linear-gradient(33deg, #a31dfc, #ee9c31);
+    background-size: 100%;
+    -webkit-text-fill-color: transparent; 
+}
 body {
     background: #ddd4c9;
-    color: #1b1b1b;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='140' height='140'%3E%3Cdefs%3E%3Cpattern id='crcsw' patternUnits='userSpaceOnUse' width='20' height='20'%3E%3Ccircle cx='' cy='' r='1' fill='%23343434' stroke='%23343434' stroke-width='0'%3E%3C/circle%3E%3C/pattern%3E%3C/defs%3E%3Cpath d='M 0 0 L 0 140 L 140 140 L 140 0 Z' style='fill: url(&quot;%23crcsw&quot;);'%3E%3C/path%3E%3C/svg%3E ");color: #1b1b1b;
     font-size: 15px;
     font-family: monospace;
-    margin: 4em 6em;
+    margin: 4em 6em 0 6em;
 }
 header {
     margin: 0 0 3em 0;
@@ -113,19 +123,29 @@ article dl dd ul {
     font-size: 0.8em;
     list-style-type: none;
     background-color: #cac0b3;
-    border: #9e978e 1px solid;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='140' height='140'%3E%3Cdefs%3E%3Cpattern id='qzpbc' patternUnits='userSpaceOnUse' width='20' height='20'%3E%3Cpath d='M 0,20 l 20,-20 M -5,5 l 10,-10 M 15,25 l 10,-10' stroke-width='0.2' shape-rendering='auto' stroke='%23343434' stroke-linecap='square'%3E%3C/path%3E%3C/pattern%3E%3C/defs%3E%3Cpath d='M 0 0 L 0 140 L 140 140 L 140 0 Z' style='fill: url(&quot;%23qzpbc&quot;);'%3E%3C/path%3E%3C/svg%3E");border: #9e978e 1px solid;
 }
 article .date {
     color: #5c5c5c;
 }
 footer {
     margin: 3em 0 0 0;
+    padding: 2em;
+    background: #343434;
+    color: #ddd4c9;
+    position: sticky;
+    bottom: 0;
+}
+footer a {
+    color: #ddd4c9;
+    text-decoration: none;
 }
 footer a:last-child {
     margin: 0 0.2em 0 0;
     float: right;
 }
-footer hr {
+section hr {
+    margin: 3em 0 0 0;
     border: none;
     border-top: 3px solid #1b1b1b;
 }
