--- a/style.css
+++ b/style.css
@@ -35,12 +35,23 @@ header > a {
     padding-bottom: 2px;
     border-bottom: 3px solid #1b1b1b;
     margin: 0 0.5em 0 0;
+    line-height: 1.7em;
 }
 header .cursor {
     font-size: 0.9em;
     opacity: 0;
     animation: blinker 1s linear infinite;
     margin: 0 0 0 0.2em;
+}
+@keyframes blinker {
+	from,
+	49.9% {
+		opacity: 0;
+	}
+	50%,
+	to {
+		opacity: 1;
+	}
 }
 article dl {
     margin: 0 0 0 3em;
@@ -63,7 +74,6 @@ article dl dd {
     margin: 3em 6em 3em 0;
     padding: 3em 0;
 }
-
 @media only screen and (max-width: 1600px) {
     article dl dd {
         columns: 2;
@@ -97,8 +107,6 @@ article dl dd {
 article:first-of-type dl dd {
     columns: 1;
 }
-
-
 article dl dd p:first-child {
     margin: 0 auto auto auto;
 }
@@ -124,6 +132,12 @@ article dl dd ul {
     list-style-type: none;
     background-color: #cac0b3;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='140' height='140'%3E%3Cdefs%3E%3Cpattern id='qzpbc' patternUnits='userSpaceOnUse' width='20' height='20'%3E%3Cpath d='M 0,20 l 20,-20 M -5,5 l 10,-10 M 15,25 l 10,-10' stroke-width='0.2' shape-rendering='auto' stroke='%23343434' stroke-linecap='square'%3E%3C/path%3E%3C/pattern%3E%3C/defs%3E%3Cpath d='M 0 0 L 0 140 L 140 140 L 140 0 Z' style='fill: url(&quot;%23qzpbc&quot;);'%3E%3C/path%3E%3C/svg%3E");border: #9e978e 1px solid;
+}
+@media only screen and (max-width: 600px) {
+    article dl dd ul {
+        margin: 4em 0 0 -0.7em;
+        width: 100%;
+    }
 }
 article .date {
     color: #5c5c5c;
@@ -162,15 +176,4 @@ blockquote:first-of-type::first-letter {
 }
 blockquote:first-of-type {
     margin: 2em 2em 3em 2em;
-}
-
-@keyframes blinker {
-	from,
-	49.9% {
-		opacity: 0;
-	}
-	50%,
-	to {
-		opacity: 1;
-	}
 }
